# proyecto_iso

./: CMakeLists.txt  README.md  TEST  UcoActividades-Funciones.cc  UcoActividades-main.cc  UcoActividades.h  proyecto  proyecto-funciones.cc  proyecto-main.cc  proyecto.h
src/: CMakeLists.txt  UcoActividades-Funciones.cc  UcoActividades-main.cc
tests/: CMakeLists.txt  prueba-test.cc
